@@ -194,7 +194,7 @@ if test x$pylibs = xnone; then
 
    dnl look for a framework build of python first
    fw=`echo "$PYPREFIX" | sed 's/.*\(Python\.framework\).*/\1/;'`
-   if test "x$fw" != x; then
+   if test "x$fw" != x && test "x$osx" = "xyes"; then
        PY_LIBS="-framework Python"
        PY_FWDIR="$PYPREFIX/lib/python$PYLIBVER/site-packages"
        PY_SPDIR="$libdir/python$PYLIBVER/site-packages"
