@@ -10,8 +10,22 @@ diskiotest_SOURCES = diskiotest.cc
 diskiotest_LDADD = -L$(top_builddir)/src/base/ -ladonthell_base
 
 guitest_SOURCES = guitest.cc
-guitest_LDADD = -L$(top_builddir)/src/gui/ -ladonthell_gui -L$(top_builddir)/src/gfx/ -ladonthell_gfx -L$(top_builddir)/src/input/ -ladonthell_input -L$(top_builddir)/src/base/ -ladonthell_base -L$(top_builddir)/src/main -ladonthell_main -L$(top_builddir)/src/python/ -ladonthell_python $(PY_LIBS)
+guitest_LDADD = \
+	-L$(top_builddir)/src/gui/ -ladonthell_gui                 \
+	-L$(top_builddir)/src/gfx/ -ladonthell_gfx                 \
+	-L$(top_builddir)/src/input/ -ladonthell_input             \
+	-L$(top_builddir)/src/event/ -ladonthell_event             \
+	-L$(top_builddir)/src/py-wrappers/adonthell/ -lswigruntime \
+	-L$(top_builddir)/src/base/ -ladonthell_base               \
+	-L$(top_builddir)/src/main -ladonthell_main                \
+	-L$(top_builddir)/src/python/ -ladonthell_python $(PY_LIBS)
 
 inputtest_SOURCES = inputtest.cc
-inputtest_LDADD = -L$(top_builddir)/src/gfx/ -ladonthell_gfx -L$(top_builddir)/src/input/ -ladonthell_input -L$(top_builddir)/src/main -ladonthell_main -L$(top_builddir)/src/python/ -ladonthell_python $(PY_LIBS)
-
+inputtest_LDADD = \
+	-L$(top_builddir)/src/gfx/ -ladonthell_gfx                  \
+	-L$(top_builddir)/src/input/ -ladonthell_input              \
+	-L$(top_builddir)/src/event/ -ladonthell_event              \
+	-L$(top_builddir)/src/py-wrappers/adonthell/ -lswigruntime  \
+	-L$(top_builddir)/src/base/ -ladonthell_base                \
+	-L$(top_builddir)/src/main -ladonthell_main                 \
+	-L$(top_builddir)/src/python/ -ladonthell_python $(PY_LIBS)
